--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,8 @@ services:
       - 9000:9000
     volumes:
       - minio_data:/data
-  axiomdb:
-    image: axiomhq/axiomdb:1.3.0-rc.9
+  axiom-db:
+    image: axiomhq/axiom-db:1.3.0-rc.9
     environment:
       AXIOM_POSTGRES_URL: "postgres://axiom:axiom@postgres?sslmode=disable&connect_timeout=5"
       AXIOM_STORAGE: "minio://minio:9000/axiomdb/data?key=axiom&secret=axiomoixa&secure=false"
@@ -37,9 +37,14 @@ services:
     image: axiomhq/axiom-core:1.3.0-rc.9
     environment:
       AXIOM_POSTGRES_URL: "postgres://axiom:axiom@postgres?sslmode=disable&connect_timeout=5"
-      AXIOM_DB_URL: "http://axiomdb"
+      AXIOM_DB_URL: "http://axiom-db"
     ports:
       - 8080:80
     depends_on:
-      - axiomdb
+      - axiom-db
     restart: unless-stopped
+  init-script:
+    image: alpine:3
+    volumes:
+      - ./init.sh:/usr/bin/init
+    command: apk add --no-cache curl && /usr/bin/init
