--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,30 +7,6 @@ volumes:
   logs:
 
 services:
-  postgres: 
-    image: postgres:13-alpine
-    environment:
-      POSTGRES_USER: axiom
-      POSTGRES_PASSWORD: axiom
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-      - logs:/usr/share/log
-      - ./postgres/entrypoint.sh:/usr/local/bin/docker-entrypoint-override.sh
-    entrypoint: ["/usr/local/bin/docker-entrypoint-override.sh"]
-    command: ["postgres", "-c", "logging_collector=on", "-c", "log_statement=all", "-c", "log_directory=/usr/share/log/", "-c", "log_filename=postgres.log"]
-  minio:
-    image: minio/minio
-    environment:
-      MINIO_ACCESS_KEY: axiom
-      MINIO_SECRET_KEY: axiomoixa
-      MINIO_BROWSER: "on"
-    entrypoint: sh
-    command: -c 'mkdir -p /data/axiomdb && touch /usr/share/log/minio.log && /usr/bin/minio server --json /data | tee /usr/share/log/minio.log'
-    ports:
-      - 9000:9000
-    volumes:
-      - minio_data:/data
-      - logs:/usr/share/log
   axiom-db:
     image: axiomhq/axiom-db:1.3.0-rc.9
     environment:
@@ -50,12 +26,27 @@ services:
     depends_on:
       - axiom-db
     restart: unless-stopped
+
+  # Setup container (will exit after setup)
   setup:
     image: alpine:3
     volumes:
       - ./setup.sh:/usr/bin/setup
       - secrets:/usr/share/secrets
     command: ["/usr/bin/setup"]
+
+  # Postgres container + filebeat for logs + metricbeat for metrics
+  postgres: 
+    image: postgres:13-alpine
+    environment:
+      POSTGRES_USER: axiom
+      POSTGRES_PASSWORD: axiom
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+      - logs:/usr/share/log
+      - ./postgres/entrypoint.sh:/usr/local/bin/docker-entrypoint-override.sh
+    entrypoint: ["/usr/local/bin/docker-entrypoint-override.sh"]
+    command: ["postgres", "-c", "logging_collector=on", "-c", "log_statement=all", "-c", "log_directory=/usr/share/log/", "-c", "log_filename=postgres.log"]
   filebeat:
     image: docker.elastic.co/beats/filebeat-oss:7.10.2
     entrypoint: ["/usr/local/bin/docker-entrypoint-override.sh"]
@@ -76,6 +67,21 @@ services:
       - secrets:/usr/share/secrets
       - ./metricbeat/metricbeat.yml:/usr/share/metricbeat/metricbeat.yml
       - ./metricbeat/entrypoint.sh:/usr/local/bin/docker-entrypoint-override.sh
+
+  # Minio container + tracer + axiom cli ingestors
+  minio:
+    image: minio/minio
+    environment:
+      MINIO_ACCESS_KEY: axiom
+      MINIO_SECRET_KEY: axiomoixa
+      MINIO_BROWSER: "on"
+    entrypoint: sh
+    command: -c 'mkdir -p /data/axiomdb && touch /usr/share/log/minio.log && /usr/bin/minio server --json /data | tee /usr/share/log/minio.log'
+    ports:
+      - 9000:9000
+    volumes:
+      - minio_data:/data
+      - logs:/usr/share/log
   axiom-cli-minio-logs:
     image: axiomhq/cli:0.1.5
     environment:
