--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,7 +85,7 @@ services:
       AXM_URL: http://axiom-core
       AXM_TOKEN: 274dc2a2-5db4-4f8c-92a3-92e33bee92a8
     entrypoint: ['sh']
-    command: -c 'tail -f /usr/share/log/minio.log | axiom ingest minio-logs --flush-every 1s'
+    command: -c 'tail -f /usr/share/log/minio.log | axiom ingest minio-logs --flush-every 1s --timestamp-field time'
     volumes:
       - logs:/usr/share/log:ro
     restart: unless-stopped
@@ -110,7 +110,7 @@ services:
       AXM_URL: http://axiom-core
       AXM_TOKEN: 274dc2a2-5db4-4f8c-92a3-92e33bee92a8
     entrypoint: ['sh']
-    command: -c 'tail -f /usr/share/log/minio-traces.log | axiom ingest minio-traces --flush-every 1s'
+    command: -c 'tail -f /usr/share/log/minio-traces.log | axiom ingest minio-traces --flush-every 1s --timestamp-field time'
     volumes:
       - logs:/usr/share/log:ro
     restart: unless-stopped
