--- a/metricbeat/metricbeat.yml
+++ b/metricbeat/metricbeat.yml
@@ -14,5 +14,4 @@ metricbeat.modules:
 output.elasticsearch:
   hosts: 
     - http://axiom-core:80/api/v1/datasets/postgres-metrics/elastic
-  headers:
-    Authorization: "Bearer ${PERSONAL_ACCESS_TOKEN:?You need to set the PERSONAL_ACCESS_TOKEN environment variable}"
+  api_key: "axiom:${PERSONAL_ACCESS_TOKEN:?You need to set the PERSONAL_ACCESS_TOKEN environment variable}"
