--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,4 +12,20 @@ jobs:
         uses: actions/checkout@v2
       - name: Run ShellCheck
         run: shellcheck --enable=all ./**/*.sh
-
+  pylint_black:
+    name: Pylint & Black
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Setup
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.9'
+    - name: Install and run linters
+      run: |
+        cd ingest-webhook
+        pip install pipenv
+        pipenv install --dev
+        pipenv run pylint ingest_webhook
+        pipenv run black --check .
