Use release images

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ volumes:
 
 services:
   axiom-db:
-    image: axiomhq/axiom-db:1.3.0-rc.9
+    image: axiomhq/axiom-db:1.3.0
     environment:
       AXIOM_POSTGRES_URL: "postgres://axiom:axiom@postgres?sslmode=disable&connect_timeout=5"
       AXIOM_STORAGE: "minio://minio:9000/axiomdb/data?key=axiom&secret=axiomoixa&secure=false"
@@ -16,7 +16,7 @@ services:
       - postgres
     restart: unless-stopped
   axiom-core:
-    image: axiomhq/axiom-core:1.3.0-rc.9
+    image: axiomhq/axiom-core:1.3.0
     environment:
       AXIOM_POSTGRES_URL: "postgres://axiom:axiom@postgres?sslmode=disable&connect_timeout=5"
       AXIOM_DB_URL: "http://axiom-db"
