--- a/filebeat/Dockerfile
+++ b/filebeat/Dockerfile
@@ -2,5 +2,6 @@
 FROM docker.elastic.co/beats/filebeat-oss:7.10.2
 COPY filebeat.yml /usr/share/filebeat/filebeat.yml
 USER root
-RUN chown root:filebeat /usr/share/filebeat/filebeat.yml
+RUN chown root:filebeat /usr/share/filebeat/filebeat.yml && \
+    chmod go-w /usr/share/filebeat/filebeat.yml
 USER filebeat
